# indexhub

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cdk_app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  modal.yml  staging.yml
cdk/: fastapi_stack.py
frontend/: .eslintrc.json  .npmrc  Dockerfile  cypress.config.ts  lint-staged.js  package-lock.json  package.json  prettierrc.json  tsconfig.json
frontend/.husky/: pre-commit
frontend/cypress/: index.d.ts
frontend/cypress/e2e/: sources.cy.ts
frontend/cypress/support/: commands.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.tsx
frontend/src/actions/: actions.js
frontend/src/components/: breadcrumbs.tsx  data_table.tsx  expanded_chart_modal.tsx  list.tsx  stats.tsx  step.tsx  table.tsx  toast.tsx
frontend/src/sagas/: saga.js
frontend/src/store/: reducer.js
frontend/src/theme/: theme.ts
frontend/src/utilities/: helpers.tsx  protected_route_handler.tsx
frontend/src/utilities/backend_calls/: charts.ts  credentials.ts  integration.ts  objective.ts  policy.ts  report.ts  source.ts  stats.ts  tables.ts  user.ts
frontend/src/utilities/hooks/: auth0.ts  useStep.tsx
frontend/src/views/: 404.tsx  alerts.tsx  dashboard.tsx  docs.tsx  home.tsx  login.tsx  models.tsx  notifications.tsx  profile.tsx  protected_page.tsx  reports.tsx  settings.tsx  trends.tsx
frontend/src/views/chat/: chat_body.tsx  chat_context.tsx  chat_footer.tsx
frontend/src/views/includes/: error_boundry.tsx  layout.tsx  sidebar.tsx
frontend/src/views/includes/sidebar/: sidebar.tsx
frontend/src/views/includes/sidebar/includes/: nav_button.tsx  user_profile.tsx
frontend/src/views/nested_page/: nested_page.tsx  nested_view.tsx  protected_nested_view.tsx
frontend/src/views/objectives/: new_objective.tsx  objectives.tsx  objectives_dashboard.tsx
frontend/src/views/objectives/forecast/: forecast.tsx
frontend/src/views/objectives/forecast/_includes/: ai_analysis_modal.tsx  inventory_table.tsx  table_view.tsx
frontend/src/views/objectives/steps/: confirm_create_objective.tsx  objective_configs.tsx  objective_source.tsx  objective_type.tsx
frontend/src/views/policies/: new_policy.tsx  policies.tsx  policies_dashboard.tsx
frontend/src/views/policies/forecast/: forecast.tsx
frontend/src/views/policies/forecast/_includes/: ai_analysis_modal.tsx
frontend/src/views/policies/steps/: confirm_create_policy.tsx  policy_configs.tsx  policy_source.tsx  policy_type.tsx
frontend/src/views/reports/: new_report.tsx  profiling.tsx  reports.tsx
frontend/src/views/reports/report_types/: forecast_prediction.tsx
frontend/src/views/sources/: data.tsx  data_integrations.tsx  new_integration.tsx  new_source.tsx  source_credentials.tsx  sources.tsx  sources_table.tsx
frontend/src/views/sources/steps/: configure_source.tsx  confirm_create_source.tsx  source_path.tsx  source_type.tsx
frontend/src/views/storage/: new_storage.tsx  storage.tsx
frontend/src/views/storage/steps/: storage_config.tsx  storage_type.tsx
frontend/src/views/trends/: charts.tsx  chat_bot.tsx  projector.tsx  trends.tsx  trends_context.tsx  trends_dashboard.tsx  trends_landing.tsx  trends_sidebar.tsx  trends_sidebar_charts.tsx
frontend/src/views/trends/chat/: chat_context.tsx  footer.tsx  messages.tsx  window.tsx
frontend/src/views/trends/projector/: projector.tsx
frontend/tests/snapshots/sources/: sources_schema_all_credentials_available.json  sources_schema_all_credentials_not_available.json
indexhub/: Dockerfile  README.md  __init__.py  deployment.py  metrics.py  modal_stub.py  pyproject.toml  settings.py
indexhub/api/: auth0.py  cache.py  check_source.py  db.py  demos.py  dependencies.py  schemas.py  server.py
indexhub/api/background_tasks/: _includes.py  populate_report.py
indexhub/api/models/: __init__.py  _status.py  chart.py  copilot.py  data_table.py  integration.py  models.py  objective.py  policies.py  policy.py  policy_source.py  report.py  source.py  storage.py  table.py  user.py
indexhub/api/routers/: __init__.py  charts.py  copilot.py  data_tables.py  exports.py  integrations.py  inventory.py  objectives.py  plans.py  policies.py  product_quadrant.py  readers.py  reports.py  sources.py  stats.py  tables.py  tests.py  trends.py  upload.py  users.py
indexhub/api/services/: chart_builders.py  io.py  parsers.py  secrets_manager.py
indexhub/api/utils/: init_db.py
indexhub/flows/: __init__.py  forecast.py  forecasting.py  forecasts.py  integrations.py  lance.py  preprocess.py  preprocessing.py  reporting.py  rolling.py  trends.py
indexhub/ingestion/: reporting.py  status.py
indexhub/tests/: conftest.py  test_sources.py
indexhub/tests/snapshots/: sources.json
scripts/: run_flows.py
