[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexhub"
description = "IndexHub API and workflows."
readme = "README.md"
requires-python = ">=3.9,<3.10"
authors = [
    { name = "Christopher Lo", email = "christopher@orcabase.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "aiobotocore",
    "boto3==1.24.59",
    "fastapi",
    "httpx",
    "numpy",
    "pandas==1.5.2",
    "polars",
    "prefect",
    "requests",
    "s3fs",
    "sqlmodel",
    "jwt",
    "PyJWT",
    "xlsx2csv",
    "pyarrow",
    "openpyxl",
    "psycopg2-binary"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OrcaBaseHQ/indexhub"

[project.optional-dependencies]
dev = [
    "autoflake",
    "black",
    "coverage[toml]",
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pyupgrade",
    "ruff",
]

[tool.hatch.version]
path = "indexhub/__init__.py"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "functime"
]
context = '${CONTEXT}'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    # "B905",  # `zip()` without an explicit `strict=` parameter
]
